syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "interpretation.proto";

package protobuf.srl.sketch;

message SrlSketch {
    string id = 1;
    string domainId = 4; // used to find the domain for recognition
    repeated SrlObject sketch = 5;

    string author = 6;
    Pen pen = 7;
    Device device = 8;
    SketchAttribute attributes = 9;
    string unit = 10;
    repeated SrlPoint points = 11;
    repeated SrlSubStroke subStrokes = 12;
}

/**
 * Wraps all of the sketch objects so we can fake inheritance.
 */
message SrlObject {
    ObjectType type = 1;
    bytes object = 2;
    // TODO: add attributes field (named protoAttributes)
    // it was put in the object and not the shape and stroke because both use it and this saves on code space.
}

/**
 * The object type of the shape.
 */
enum ObjectType {
    UNKOWN = 0;
    SHAPE = 1;
    STROKE = 2;
    POINT = 3;
    SKETCH = 4;
}

message SrlShape {
    string id = 1;
    google.protobuf.Timestamp time = 2;
    string name = 3;
    bool isUserCreated = 4;
    repeated SrlInterpretation interpretations = 5; // DEPRECATED
    repeated SrlObject subComponents = 6;
    SrlBoundingBox boundingbox = 7;
    SrlInterpretation interpretation = 8;
    SketchAttribute attributes = 9;
}

message SrlStroke {
    string id = 1;
    google.protobuf.Timestamp time = 2; // the time is equal to when the stroke is finished.
    string name = 3;
    repeated SrlPoint points = 4;
    SrlBoundingBox boundingbox = 5;
    string author = 6;
    Pen pen = 7;
    Device device = 8;
    SketchAttribute attributes = 9;
    bool isUserCreated = 10;
}

/**
 * A part of a stroke or a set of points.
 */
message SrlSubStroke {
    string id = 1;
    // This is the id of the parent stroke
    string stroke = 2;
    string startIndex = 3;
    string stopIndex = 4;
    // list of point ids
    repeated string points = 5;
    SketchAttribute attributes = 6;
    string name = 7;
}

// If a point is added directly on the sketch surface then it is in a SrlStroke
// in a SrlObject all with the same id and time and name.
message SrlPoint {
    string id = 1;
    google.protobuf.Timestamp time = 2;
    string name = 3;
    double x = 4;
    double y = 5;

    /**
      * Points can have pressure depending on the input device.   It is a value between 0 and 1.
      */
    double pressure = 6;
    /**
     * Points can have size depending on the input device.  This does not have an upper limit but the default value is 1.
     */
    double size = 7;
    /**
     * Gives the instantaneous speed calculated from this and the previous
     * point.
     */
    double speed = 8;
}

message SrlBoundingBox {
    double x = 1;
    double y = 2;
    double width = 3;
    double height = 4;
}

message RecognitionTemplate {
    string templateId = 1;
    // oneof TemplateType {
    SrlStroke stroke = 2;
    SrlShape shape = 3;
    SrlSketch sketch = 4;
    // }
    SrlInterpretation interpretation = 5; // DEPRECATED

    /**
     * How the template should be used for training.
     */
    TemplateType type = 6;

    enum TemplateType {
        UNKNOWN = 0;
        POSITIVE = 1;
        NEGATIVE = -1;
    }

    /**
     * A list of intepretations this template applies to.
     */
    repeated SrlInterpretation interpretations = 7;
}

/**
 * The person who created the sketch.
 */
message Sketcher {
    string id = 1;
    string nickname = 2;
}

message Device {
    string id = 1;
    int32 dpi = 2;
    string os = 3;
    bool penEnabled = 4;
    bool touchEnabled = 5;
    bool mouseEnables = 6;
    bool physicalKeyboard = 7;
}

message Pen {
    string id = 1;
    string productName = 2;
    string brandName = 3;
    string isPenFinger = 4;
    string isPenMouse = 5;
    string penDigit = 6;
}

/**
 * An attribute that can be applied to a part of a sketch.
 */
message SketchAttribute {
    map<string, google.protobuf.Any> attributes = 1;
}
